# AcrPLMEvo

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
data/anticrispr_benchmarks/: make_binary_csv.py  new_case.csv  new_case.fasta
external_validation/: README.md
external_validation/data/: new_case.csv  new_case.fasta
external_validation/results/: external_validation_esm2_dora_pssm_seed44.ipynb  new_case_predictions_esm2_dora_pssm_seed44.csv
notebooks/: AcrPLMEvo.demo.ipynb
results/: 6categories_best_single_seed_by_auc_then_auprc.csv  6categories_seedmean_auc_auprc.csv  delta_vs_lm_only.csv  experiments.csv  experiments_frozen.csv  experiments_frozen_cross_variant.csv  experiments_frozen_no_lora.csv  summary_10group_by_model.csv  summary_10group_runs.csv  summary_by_model_variant.csv
results/plots/6category/: six_category_mean_std_by_model.csv
scripts/: main.py  prefetch_backbones.py  run_full_benchmark.sh  supervise_prefetch_model.sh
scripts/frozen_baseline/: run_supplemental_frozen_eval.py
scripts/pipelines/: run_phase_a_adapters.sh  run_supplemental_frozen_eval.sh
src/acrplmevo/: __init__.py  backbones.py  pssm_fusion.py
src/acrplmevo/pssm_pipeline/: __init__.py  build_feature_cache.py  extract_features.py  prepare_fasta.py
