[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acrplmevo"
version = "0.1.0"
description = "Reproducible Anti-CRISPR protein benchmark with parameter-efficient LLM tuning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TAN KAILAI", email = "kailaitan@163.com" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "transformers>=4.40",
  "peft>=0.10",
  "huggingface_hub>=0.22"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
